hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_newInstanceArgs_002.php.expectf
Catchable fatal error: Argument 1 passed to ReflectionClass::newInstanceArgs() must be of the type array, string given in %s on line 8